# project-2-lukyanchikov

./: README.md  db_meta.json  pyproject.toml
project#2_lukyanchikov_ДПО_НОД/: description.txt  pyproject.toml
project-2-lukyanchikov-dpo-nod/: README.md  pyproject.toml
project-2-lukyanchikov-dpo-nod/src/primitive_db/: core.py  engine.py  main.py  utils.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
