[tool.poetry]
name = "project-2-lukyanchikov-dpo-nod"
version = "0.1.0"
description = ""
authors = ["vgl3000@gmail.com"]
packages = [{ include = "primitive_db", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
prettytable = "^3.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
