[tool.poetry]
name = "project#2-lukyanchikov-<дпо-нод>"
version = "0.1.0"
description = ""
authors = ["Лукьянчиков Валерий <vgl3000@gemail.com>"]
readme = "README.md"
packages = [{include = "project#2_lukyanchikov_<дпо_нод>"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
