[project]
name = "project-2-lukyanchikov--dpo-nod"
version = "0.1.0"
description = ""
authors = [
    {name = "vgl3000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
